fix(huron): PROVISION-3657 Number not showing on Customer Portal - address review comments

--- a/app/modules/huron/lines/_line-list.scss
+++ b/app/modules/huron/lines/_line-list.scss
@@ -58,13 +58,18 @@
   font-size: $h5-font-size;
 }
 
-.linelist-actions {
-  span {
-    color: $color-alerts-base;
+.line-list-actions-menu {
+  .actions {
+    span {
+      color: $color-alerts-base;
+    }
+  }
+
+  .dropdown-menu.dropdown-primary {
+    overflow: visible;
+    position: absolute;
+    right: 0;
+    left: auto;
   }
 }
 
-.linelist-actions-dropdown-menu.dropdown-primary {
-  overflow: visible;
-  position: absolute;
-}
